# hivemind

./: .clinerules  .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_GUIDELINES.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_IMPROVEMENT_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  GOLEM_COMPARISON_ANALYSIS.md  GO_WORKER_IMPLEMENTATION_PLAN.md  GO_WORKER_SECURITY_PERFORMANCE_REVIEW.md  GRPC_PROTOCOL_UPDATE_REPORT.md  HOW_TO_USE.md  IDEA.md  IMPROVEMENTS_SUMMARY.md  MONTY_EXECUTOR_REQUIREMENTS.md  Makefile  NODEPOOL_SECURITY_AUDIT.md  NODE_POOL_ARCHITECTURE_ANALYSIS.md  PROJECT_STATUS_REPORT.md  PROJECT_STATUS_UPDATE_2026_04_30.md  PROJECT_STRUCTURE.md  PYTHON_REMOVAL_REPORT.md  PYTHON_TO_GO_MIGRATION_PLAN.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.en.md  README.md  README.zh-TW.md  README_ZIP_FEATURE.md  REMAINING_MODULES_FOR_RELEASE.md  REMAINING_MODULES_FOR_RELEASE_V2.md  SECURITY_PERFORMANCE_REVIEW.md  START_TESTING.md  (+53 more)
.github/: copilot-instructions.md
DNA_RNA 組合模擬器_files/: index.css  index.html  index.js
ai/: Identification.py  README.en.md  README.md  breakdown.py  main.py  q_table.pkl
app/: build.gradle.kts
backend/: DEPLOYMENT.md  main.py  requirements.txt
bt/: README.en.md  README.md  create_torrent.py  seeder.py  test.torrent  tracker.py
cloudflare/: AGENTS.md  DEPLOYMENT.md  main.js
docs/: API.md  ARCHITECTURE.md  BACKEND_SERVICE_PROGRESS.md  DEPLOYMENT.md  DEVELOPER.md  DEVELOPMENT_PROGRESS.md  ENGLISH_DOCS_SUMMARY.md  GETTING_STARTED.md  MANAGED_FUNCTION_RUNTIME.md  PUBLIC_NETWORK_LIMITATIONS.md  README.en.md  README.md  REDIS_MIGRATION_PLAN.md  SMOKE_BENCHMARKS.md  TROUBLESHOOTING.md  UI_SEPARATION_PLAN.md  UPDATE_SUMMARY_2026_03_25.md  UTILITY_PERFORMANCE_EVALUATION.md  VPN_DEPLOYMENT_GUIDE.md  VPN_IMPLEMENTATION_SUMMARY.md  VPN_PROTO_GENERATION.md  VPN_QUICKSTART.md  VPN_README.md  VPN_TESTING_DEPLOYMENT_SUMMARY.md  WINDOWS_WORKER_PACKAGING.md  developer-architecture.md  developer-runbook.md  master_python_to_go_mapping.md  nodepool-functional-flow.md  nodepool_python_to_go_mapping.md  rpc-contract-notes.md  security-and-logic-risks.md  task-cleanup-strategy.md  user-task-guide.md  worker_python_to_go_mapping.md
documentation/: README.md
download_api/: client_example.py  download_server.py  version_manager.py
executor-rs/: .codespellrc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
executor-rs/crates/managed-function-runtime/: Cargo.toml
executor-rs/crates/managed-function-runtime/src/: lib.rs
executor-rs/crates/managed-function-runtime/tests/: runtime.rs
executor-rs/crates/managed-function-transpiler/: Cargo.toml  README.md
executor-rs/crates/managed-function-transpiler/src/: lib.rs
executor-rs/crates/managed-function-transpiler/tests/: transpiler.rs
frontend/: .env.example  AGENTS.md  DEPLOYMENT.md  Dockerfile  dashboard.html  index.html  login.html  package-lock.json  package.json  register.html
hivemind-rs/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.test  README.md
hivemind-rs/crates/: AGENTS.md
hivemind-rs/crates/auth/: Cargo.toml  README.md
hivemind-rs/crates/auth/src/: jwt_service.rs  lib.rs  user_repository.rs  worker_execution.rs
hivemind-rs/crates/client-runtime/: Cargo.toml  build.rs
hivemind-rs/crates/client-runtime/src/: lib.rs
hivemind-rs/crates/common/: Cargo.toml
hivemind-rs/crates/common/src/: lib.rs
hivemind-rs/crates/config/: Cargo.toml
hivemind-rs/crates/config/src/: lib.rs
hivemind-rs/crates/database/: Cargo.toml  README.md
hivemind-rs/crates/database/src/: lib.rs  postgres.rs  redis_store.rs
hivemind-rs/crates/hivemind-bin/: Cargo.toml
hivemind-rs/crates/hivemind-bin/src/: cli.rs  lib.rs  main.rs
hivemind-rs/crates/master-api/: Cargo.toml  README.md
hivemind-rs/crates/master-api/src/: grpc_client.rs  handlers.rs  integration_tests.rs  lib.rs  middleware.rs  routes.rs  tests.rs  vpn_bootstrap.rs
hivemind-rs/crates/models/: Cargo.toml  README.md
hivemind-rs/crates/models/src/: lib.rs
hivemind-rs/crates/node-manager/: Cargo.toml  README.md
hivemind-rs/crates/node-manager/src/: grpc.rs  heartbeat.rs  lib.rs  service.rs  worker_repository.rs
hivemind-rs/crates/proto/: Cargo.toml  build.rs
hivemind-rs/crates/proto/src/: lib.rs
hivemind-rs/crates/task-scheduler/: Cargo.toml  README.md
hivemind-rs/crates/task-scheduler/src/: dispatcher.rs  lib.rs  scheduler.rs  task_repository.rs
hivemind-rs/crates/torrent-service/: Cargo.toml
hivemind-rs/crates/torrent-service/src/: lib.rs  metainfo.rs  p2p_swarm.rs  tracker.rs  transfer.rs
hivemind-rs/crates/vpn-service/: Cargo.toml  README.md
hivemind-rs/crates/vpn-service/src/: grpc_server.rs  headscale_client.rs  lib.rs  peer_manager.rs  wireguard_config.rs
hivemind-rs/crates/website-api/: Cargo.toml
hivemind-rs/crates/website-api/src/: grpc_client.rs  handlers.rs  lib.rs  middleware.rs  routes.rs
hivemind-rs/crates/worker-executor/: Cargo.toml  README.md
hivemind-rs/crates/worker-executor/src/: control_api.rs  executor.rs  grpc_server.rs  lib.rs  nodepool_client.rs  resource_monitor.rs  sandbox.rs
infra/: docker-compose.vpn.yml  docker-compose.yml
installer/: go.mod  go.sum  installer_fyne.go  installer_ui.go  main.go
kivy/: android_worker_node.py  setup_android.py
master/: README.md  build.py  compilation-report.xml  master_node.py  nodepool.proto  nodepool_pb2.py  run.c  vpn.py  wg0.conf
node_pool/: README.md  __init__.py  auth_interceptor.py  config.py  database_manager.py  database_migration.py  generate_proto.py  master_node_service.py  monitor_service.py  node_manager.py  node_manager_service.py  node_pool_server.py  nodepool.proto  nodepool_pb2.py  nodepool_pb2_grpc.py  requirements.txt  task_cleanup_scheduler.py  test_multi_task_distribution.py  user_manager.py  user_service.py  worker_node_service.py
proto/: hivemind.proto  vpn.proto
staff/: app.py  (+1 more)
subagents/sandbox-egress/: Cargo.toml
subagents/sandbox-egress/src/: main.rs
(+1957 files in other folders)
