[workspace]
members = [
    "crates/common",
    "crates/proto",
    "crates/models",
    "crates/config",
    "crates/database",
    "crates/auth",
    "crates/node-manager",
    "crates/task-scheduler",
    "crates/master-api",
    "crates/website-api",
    "crates/worker-executor",
    "crates/client-runtime",
    "crates/vpn-service",
    "crates/torrent-service",
    "crates/hivemind-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hivemind/hivemind"
authors = ["Hivemind Team"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.13", features = ["transport", "codegen", "prost", "tls-ring", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
tower = { version = "0.5", features = ["timeout", "limit", "util"] }
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "fs"] }
hyper = { version = "1", features = ["server"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "derive", "chrono", "uuid", "json", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
sha1 = "0.10"
hex = "0.4"
bendy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
tempfile = "3"
dotenvy = "0.15"
sysinfo = "0.30"

# WireGuard userspace implementation (boringtun)
boringtun = "0.7"
x25519-dalek = "2.0"
rand = { version = "0.8", features = ["std_rng"] }
zeroize = "1.8"
