[package]
name = "sandbox-egress"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sandbox-egress"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ipnet = "2"

[dev-dependencies]
tempfile = "3"
