[package]
name = "managed-function-transpiler"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Conservative Python/C++ to managed function syntax transpiler."
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "managed_function_transpiler"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
