[package]
name = "hivemind-auth"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
hivemind-models = { path = "../models" }
hivemind-database = { path = "../database" }
hivemind-config = { path = "../config" }