[package]
name = "hivemind-client-runtime"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
hivemind-config = { path = "../config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
boringtun.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
zeroize.workspace = true
hex.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
