[package]
name = "hivemind-database"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
hivemind-models = { path = "../models" }
hivemind-config = { path = "../config" }
