[package]
name = "hivemind-bin"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hivemind-common = { path = "../common" }
hivemind-proto = { path = "../proto" }
hivemind-models = { path = "../models" }
hivemind-config = { path = "../config" }
hivemind-database = { path = "../database" }
hivemind-auth = { path = "../auth" }
hivemind-node-manager = { path = "../node-manager" }
hivemind-task-scheduler = { path = "../task-scheduler" }
hivemind-master-api = { path = "../master-api" }
hivemind-worker-executor = { path = "../worker-executor" }
hivemind-vpn-service = { path = "../vpn-service" }
