[package]
name = "hivemind-master-api"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
hivemind-proto = { path = "../proto" }
hivemind-models = { path = "../models" }
hivemind-config = { path = "../config" }
hivemind-torrent-service = { path = "../torrent-service" }

[dev-dependencies]
tower.workspace = true
tempfile.workspace = true
sqlx.workspace = true
bcrypt.workspace = true
hivemind-auth = { path = "../auth" }
hivemind-database = { path = "../database" }
hivemind-node-manager = { path = "../node-manager" }
hivemind-task-scheduler = { path = "../task-scheduler" }
